--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm run dev --prefix ../stock-market-portfolio-frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "Charlie Nourrcier",
@@ -14,7 +17,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
-    "mongoose": "^8.5.0",
+    "mongoose": "^8.5.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.4"
   }
 }
